Fix build warnings, improve Tor setup, and add Ubuntu documentation
- Fix duplicate branches warning in mining.cpp
- Remove unused NONCE_WRAP variable
- Make genesis_miner_raw conditional on BUILD_KERNEL_LIB
- Improve setup-drip-node.sh to create startup script with Tor group handling
- Add Ubuntu build and setup documentation (doc/build-ubuntu.md)
- Add helper scripts: start-drip-node.sh and get-onion-address.sh
- Include example onion address for node connections

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -214,14 +214,16 @@ add_all_test_targets()
 install_binary_component(test_bitcoin INTERNAL)
 
 # RAW Genesis Block Miner - standalone utility
-add_executable(genesis_miner_raw
-  genesis_miner_raw.cpp
-)
+if(BUILD_KERNEL_LIB)
+  add_executable(genesis_miner_raw
+    genesis_miner_raw.cpp
+  )
 
-target_link_libraries(genesis_miner_raw
-  bitcoinkernel
-  bitcoin_consensus
-  secp256k1
-)
+  target_link_libraries(genesis_miner_raw
+    bitcoinkernel
+    bitcoin_consensus
+    secp256k1
+  )
 
-install_binary_component(genesis_miner_raw INTERNAL)
+  install_binary_component(genesis_miner_raw INTERNAL)
+endif()
