Fix critical issues for v1.0.0
- Fix BIP34Hash to use genesis block hash
- Fix bech32 prefix docs (drip, not drip1)
- Fix difficulty adjustment docs (4032 blocks for 5-min blocks)
- Update SECURITY.md with DRIP contacts
- Update CMakeLists.txt branding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,10 +50,10 @@ set(CMAKE_TRY_COMPILE_PLATFORM_VARIABLES
   CMAKE_CXX_LINK_EXECUTABLE
 )
 
-project(BitcoinCore
+project(DRIP
   VERSION ${CLIENT_VERSION_MAJOR}.${CLIENT_VERSION_MINOR}.${CLIENT_VERSION_BUILD}
   DESCRIPTION "DRIP client software"
-  HOMEPAGE_URL "https://bitcoincore.org/"
+  HOMEPAGE_URL "https://github.com/digital-reserve/DRIP"
   LANGUAGES NONE
 )
 
